fixing navigation styling to prevent word overlap on mobile views

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,40 +1,48 @@
 nav {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  /* grid-template-columns: 50% 50%; */
   text-align: center;
 }
 
 nav ul{
   list-style: none;
-  display: grid;
-  grid-template-columns: 20% 20% 20% 20% 20%;
+  padding: 0;
+  display: flex;
+  /* display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%; */
 }
 
 nav li {
-  padding-left: 2px;
-  padding-right: 2px;
+  /* padding-left: 10px;
+  padding-right: 10px; */
+  padding: 10px;
 }
 
 nav h1 {
-  padding-left: 37px;
-  text-align: center;
+  /* padding-left: 37px;
+  text-align: center; */
+  padding: 10px;
 }
 
 @media (max-width: 786px) {
   nav {
-    grid-template-columns: 100%;
-  }
-
-  nav ul {
+    /* grid-template-columns: 100%; */
     grid-template-columns: 1fr;
+  }
+  
+  nav ul {
+    /* grid-template-columns: 1fr; */
+    flex-direction: column;
   }
 
   nav li {
-    text-align: center;
+    /* text-align: center; */
     padding: 8px;
   }
 
   nav h1 {
-    text-align: center;
+    /* text-align: center; */
+    padding: 8px;
   }
 }
